# GirderMedViewer

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  app.cfg  app.template.cfg  med_viewer_app.py  pyproject.toml  requirements.txt  slicer_utils.py  slicer_viewer.py  vtk_utils.py  vtk_viewer.py
.github/workflows/: test_and_release.yml
bundles/desktop/: README.md
bundles/docker/: DEPLOY.md  README.md
bundles/docker/scripts/: run_image.sh
examples/launcher/: index.html  launcher.json
girdermedviewer/app/: __main__.py  components.py  core.py  objects.py  vtk_utils.py
girdermedviewer/app/girder/: components.py  utils.py
girdermedviewer/app/vtk/: components.py  utils.py
girdermedviewer/app/widgets/: __init__.py
girdermedviewer/app/widgets/logic/: __init__.py  app_logic.py  base_logic.py
girdermedviewer/app/widgets/logic/girder/: __init__.py  girder_browser_logic.py  girder_connection_logic.py  girder_load_logic.py  girder_logic.py
girdermedviewer/app/widgets/logic/scene/: __init__.py  object_logic.py  scene_logic.py
girdermedviewer/app/widgets/logic/scene/filters/: __init__.py  gaussian_filter_logic.py  segmentation_filter_logic.py  streamline_filter_logic.py
girdermedviewer/app/widgets/logic/scene/handlers/: mesh_handler.py  object_handler.py  segmentation_handler.py  volume_handler.py
girdermedviewer/app/widgets/logic/scene/objects/: __init__.py  mesh_object_logic.py  scene_object_logic.py  volume_object_logic.py
girdermedviewer/app/widgets/logic/vtk/: place_roi_logic.py  scene_logic.py  segmentation_effect_logic.py  tool_logic.py  views_logic.py
girdermedviewer/app/widgets/logic/vtk/handlers/: mesh_handler.py  object_handler.py  volume_handler.py
girdermedviewer/app/widgets/logic/vtk/tools/: base_tool_logic.py  place_point_logic.py  place_roi_logic.py  segmentation_effect_logic.py
girdermedviewer/app/widgets/ui/: __init__.py  app_ui.py  point_selector_ui.py
girdermedviewer/app/widgets/ui/girder/: __init__.py  girder_browser_ui.py  girder_connection_ui.py  girder_items_ui.py
girdermedviewer/app/widgets/ui/scene/: __init__.py  scene_state.py  scene_ui.py
girdermedviewer/app/widgets/ui/vtk/: base_view.py  components.py  position_menu.py  scene_ui.py  slice_view.py  threed_view.py  tool_strip_ui.py  tool_ui.py  view_ui.py  views_state.py  views_ui.py
girdermedviewer/app/widgets/utils/: __init__.py  app_utils.py  components_utils.py  girder_utils.py  scene_utils.py  vtk_utils.py
girdermedviewer/app/widgets/utils/vtk/: __init__.py  preset_utils.py  segmentation.py  vtk_utils.py
utils/girdermedviewer_plugin/: README.md  setup.py
utils/girdermedviewer_plugin/girdermedviewer_filemodel/: __init__.py
(+20 files in other folders)
